@@ -9,3 +9,5 @@
  24-Apr-2019    V0.16 Exclude synthetic SCOP root node from export tree node list
  22-Jun-2019    V0.17 Update development workflow
  13-Jun-2019    V0.18 Improve Py27 character encoding compatibility
+ 14-Aug-2019    V0.19 Adjust cache management
+ 29-Aug-2019    V0.20 Add ScopClassificationProvider() and CathClassificationProvider()
